--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 
+@import url('https://fonts.googleapis.com/css2?family=Unkempt:wght@400;700&display=swap');
+
 :root {
-  font-family: system-ui, Unkempt, Helvetica, Arial, sans-serif;
+  font-family: system-ui, Unkempt, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
