--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,17 +1,34 @@
 @import "tailwindcss";
 
-@import url('https://fonts.googleapis.com/css2?family=Unkempt:wght@400;700&display=swap');
+@font-face {
+  font-family: 'Unkempt';
+  src: url('./assets/unkempt.regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Kavivanar';
+  src: url('./assets/kavivanar-regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@theme {
+  --font-unkempt: 'Unkempt', system-ui, sans-serif;
+  --font-roboto: 'Kavivanar', system-ui, sans-serif;
+}
 
 :root {
-  font-family: system-ui, Unkempt, sans-serif;
+  font-family: 'Kavivanar', system-ui, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #E0BE99;
+  background-color: #E0CFAC;
 
-  font-synthesis: none;
+  /* font-synthesis: none; */
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
