--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,20 +1,48 @@
 @import "tailwindcss";
 
-/* :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+@font-face {
+  font-family: 'Unkempt';
+  src: url('./assets/Unkempt-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Kavivanar';
+  src: url('./assets/kavivanar-regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+.almost-black {
+  color: #424C51;
+}
+
+.awesome-blue {
+  color: #749DA1;
+}
+
+@theme {
+  --font-unkempt: 'Unkempt', system-ui, sans-serif;
+  --font-kavivanar: 'Kavivanar', system-ui, sans-serif;
+  --color-sillyyellow: #F7E7B3
+}
+
+:root {
+  font-family: 'Kavivanar', system-ui, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #E0CFAC;
+}
 
-  font-synthesis: none;
+  /* font-synthesis: none; /
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-} */
-
+}
 /* a {
   font-weight: 500;
   color: #646cff;
