--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'Unkempt';
-  src: url('./assets/unkempt.regular.ttf') format('truetype');
+  src: url('./assets/unkempt-regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
