added more small animations

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,6 +28,7 @@
   --color-sillyyellow: #F7E7B3;
   --color-almostblack: #424C51;
   --color-beige: #E0CFAC;
+  --color-awesomeblue: #749DA1;
 }
 
 :root {
